package(default_visibility=["//visibility:public"])

load("@angular//:index.bzl", "ng_package")
load("//tools:sass_bundle.bzl", "sass_bundle")
load("//:packages.bzl", "IONIC_PACKAGES", "IONIC_TARGETS", "ROLLUP_GLOBALS",
    "VERSION_PLACEHOLDER_REPLACEMENTS")
load("//tools:defaults.bzl", "ng_module")

# Root "@gngt/ionic" entry-point.
ng_module(
  name = "ionic",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/ionic",
  deps = ["//src/ionic/%s" % p for p in IONIC_PACKAGES],
)

# Creates the @gngt/ionic package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/lib/public_api.js",
  entry_point_name = "ionic",
  globals = ROLLUP_GLOBALS,
  data = [],
  packages = ["//src/ionic/schematics:npm_package"],
  replacements = VERSION_PLACEHOLDER_REPLACEMENTS,
  deps = IONIC_TARGETS,
  # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
  tags = ["manual"],
)
