package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package")
load(
    "//:packages.bzl",
    "IONIC_PACKAGES",
    "IONIC_TARGETS",
    "ROLLUP_GLOBALS",
)

filegroup(
    name = "overviews",
    srcs = ["//src/ionic/%s:overview" % name for name in IONIC_PACKAGES],
)

# Root "@gngt/ionic" entry-point.
ng_module(
    name = "ionic",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@gngt/ionic",
    deps = [
        "@npm//@angular/core",
    ],
)

# Creates the @gngt/ionic package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "src/lib/public_api.js",
    entry_point_name = "ionic",
    globals = ROLLUP_GLOBALS,
    packages = ["//src/ionic/schematics:npm_package"],
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = IONIC_TARGETS,
)
