package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package")
load(
    "//:packages.bzl",
    "MATERIAL_PACKAGES",
    "MATERIAL_TARGETS",
    "ROLLUP_GLOBALS",
)

filegroup(
    name = "overviews",
    srcs = ["//src/material/%s:overview" % name for name in MATERIAL_PACKAGES],
)

# Root "@gngt/material" entry-point.
ng_module(
    name = "material",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@gngt/material",
    deps = [
        "@npm//@angular/core",
    ],
)

# Creates the @angular/material package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "src/lib/public_api.js",
    entry_point_name = "material",
    globals = ROLLUP_GLOBALS,
    packages = ["//src/material/schematics:npm_package"],
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = MATERIAL_TARGETS,
)
