package(default_visibility=["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

ts_library(
  name = "example-module-lib",
  srcs = glob(["**/*.ts"]),
  deps = [
    "@gngtdeps//@types/node",
    "@gngtdeps//typescript",
  ],
  tsconfig = ":tsconfig.json",
)

nodejs_binary(
  name = "bazel-bin",
  entry_point = "gngt/tools/example-module/bazel-bin.js",
  data = [
    "@gngtdeps//typescript",
    "@gngtdeps//source-map-support",
    ":example-module-lib",
    ":example-module.template",
  ],
)
