load("//src/core:config.bzl", "CORE_ENTRYPOINTS")
load("//src/ionic:config.bzl", "IONIC_ENTRYPOINTS", "IONIC_TESTING_ENTRYPOINTS")
load("//src/material:config.bzl", "MATERIAL_ENTRYPOINTS", "MATERIAL_TESTING_ENTRYPOINTS")
load(":generate-guard-tests.bzl", "generate_test_targets")

package(default_visibility = ["//visibility:public"])

golden_files = [
                   # Primary entry-points.
                   "core/core.md",
                   "ionic/ionic.md",
                   "material/material.md",
               ] + ["core/%s.md" % e for e in CORE_ENTRYPOINTS] + \
               ["ionic/%s.md" % e for e in IONIC_ENTRYPOINTS + IONIC_TESTING_ENTRYPOINTS] + \
               ["material/%s.md" % e for e in MATERIAL_ENTRYPOINTS + MATERIAL_TESTING_ENTRYPOINTS]

# Generate the API guard test targets for each golden file in the current package.
generate_test_targets(targets = golden_files)
