package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "admin",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/core/admin",
  assets = [],
  deps = [
    "@angular//packages/core",
    "@angular//packages/forms",
    "@angular//packages/router",
    "@angular_material//src/cdk/coercion",
    "//src/core/model",
  ],
)

ng_test_library(
  name = "admin_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":admin"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":admin_test_sources"],
)
