package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_library",
)

ng_module(
    name = "auth",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@gngt/core/auth",
    deps = [
        "//src/core/common",
        "//src/core/reducers",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//@ngx-translate/core",
        "@npm//@types/url-parse",
        "@npm//url-parse",
    ],
)

sass_library(
    name = "auth_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":auth",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    bootstrap = [
        "@npm//:node_modules/crypto-js/crypto-js.js",
        "@npm//:node_modules/crypto-js/index.js",
    ],
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["auth.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
