package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "calendar",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/core/calendar",
  assets = [],
  deps = [
    "@angular//packages/core",
    "@angular//packages/forms",
    "@gngtdeps//date-fns"
  ],
)

ng_test_library(
  name = "calendar_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":calendar"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":calendar_test_sources"],
)
