package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "reducers",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/core/reducers",
  assets = [],
  deps = [
    "@angular//packages/core",
  ],
)

ng_test_library(
  name = "reducers_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":reducers"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":reducers_test_sources"],
)
