package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("//:packages.bzl", "VERSION_PLACEHOLDER_REPLACEMENTS")
load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")

# TODO(devversion): remove when https://github.com/bazelbuild/rules_nodejs/issues/352 is fixed
exports_files(["#bazel_workaround.txt"])

filegroup(
    name = "schematics_assets",
    srcs = glob([
        "**/files/**/*",
        "**/*.json",
    ]),
)

ts_library(
    name = "schematics",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/files/**/*.ts",
            "**/*.spec.ts",
            "testing/**/*.ts",
        ],
    ),
    module_name = "@gngt/core/schematics",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@schematics/angular",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//@angular/cdk",
        # TODO(devversion): Only include jasmine for test sources (See: tsconfig types).
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//glob",
        "@npm//parse5",
        "@npm//tslint",
        "@npm//typescript",
    ],
)

# This package is intended to be combined into the main @gngt/core package as a dep.
npm_package(
    name = "npm_package",
    srcs = [":schematics_assets"],
    replacements = VERSION_PLACEHOLDER_REPLACEMENTS,
    deps = [":schematics"],
)

### Testing rules

jasmine_node_test(
    name = "unit_tests",
    srcs = [":unit_test_sources"],
    data = [":schematics_assets"],
    deps = [
        "@npm//chalk",
    ],
)

ts_library(
    name = "unit_test_sources",
    testonly = True,
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/files/**/*.spec.ts"],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        ":schematics",
        "//src/core/schematics/testing",
        "@npm//@angular-devkit/schematics",
        "@npm//@schematics/angular",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//mock-fs",
        "@npm//tslint",
        "@npm//typescript",
    ],
)
