package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "sync",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/core/sync",
  assets = [],
  deps = [
    "@angular//packages/common/http",
    "@angular//packages/core",
    "@gngtdeps//@types/pouchdb",
    "@gngtdeps//@types/pouchdb-find",
    "//src/core/common",
  ],
)

ng_test_library(
  name = "sync_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/common/http",
    "@angular//packages/common/http/testing",
    "@angular//packages/platform-browser",
    "@gngtdeps//@types/pouchdb",
    "@rxjs",
    "@rxjs//operators",
    ":sync"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":sync_test_sources"],
)
