package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

ng_module(
    name = "sync",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@gngt/core/sync",
    deps = [
        "//src/core/common",
        "@npm//@angular/core",
        "@npm//@types/pouchdb",
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":sync",
        "//src/core/common",
        "@npm//@angular/common",
        "@npm//@angular/platform-browser",
        "@npm//@types/pouchdb",
        "@npm//rxjs",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["sync.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
